log
Thu 21 Mar 2024 05:46:43 PM UTC: 
 tests:  0|5
total_score: 0/70
6101767
Thu 21 Mar 2024 05:47:35 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
4a7ab75
Thu 21 Mar 2024 05:47:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
947a1a1
Thu 21 Mar 2024 05:50:28 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
2f918fd
Thu 21 Mar 2024 05:50:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d1bcd2f
Thu 21 Mar 2024 05:51:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
03dab52
Thu 21 Mar 2024 05:59:38 PM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
54e8f68
Fri 22 Mar 2024 12:36:45 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
f56b61b
Fri 22 Mar 2024 12:39:02 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:13: error: comparison between pointer and integer [-Werror]
   82 |     if(dato == elem){
      |             ^~
cc1: all warnings being treated as errors
Compilation failed
cc330f2
Fri 22 Mar 2024 12:39:14 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:81:11: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   81 |     *dato = next(L);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
fbc1ddc
Fri 22 Mar 2024 12:43:01 AM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
7f457ad
Fri 22 Mar 2024 12:54:43 AM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  3|2
total_score: 40/70
e30fdc3
Sat 23 Mar 2024 02:21:55 PM UTC: 
 exercises.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
0f10e57
